# Embedded_videos

./: .gitignore  README.md
001_FirstSetup/: main.c
001_FirstSetup/TEMPLATE/: Makefile  README.md  main.c  system_stm32f4xx.c
002_GPIOBasics/: Makefile  main.c
003_USART/: main.c
004_USART-withRX/: Makefile  main.c
005_ADC/: Makefile  main.c
006_DMAWithADC/: Makefile  main.c
007_SPI/: Makefile  main.c
009_Timers/: Makefile  main.c
011_Timers-PWM-OC/: Makefile  main.c
012_Debugging-template/: main.c
015_DAC/: main.c
018_CubeIDE-template/: README.md  intelli-theme-eclipse_26196.xml  my_functions.c  my_functions.h
020_ADC-Calibration/: analog.c  analog.h
021_USB-SerialEmulation/: usb_serial.c  usb_serial.h
022_USB-HIDKeyboard/: usb_hid_keyboard.c  usb_hid_keyboard.h
024_ADC-HAL/: analog.c  analog.h
026_HAL-I2C/: README.md  i2c_examples.c  i2c_examples.h  main.c
027_HAL-SPI/: README.md  main.c  spi_examples.c  spi_examples.h
028_DIY-DAC-PT2/: README.md  main.c  pcm1792.c  pcm1792.h  spi_my.c  spi_my.h  timer.c  timer.h
029_DIY-DAC-PT3/: README.md  main.c
029_DIY-DAC-PT3/dac/inc/: pcm1792.h  usb_interface.h
029_DIY-DAC-PT3/dac/src/: pcm1792.c  usb_interface.c
029_DIY-DAC-PT3/display/inc/: gui.h  seq.h  single.h  ssd1306.h  ssd1306_fonts.h
029_DIY-DAC-PT3/display/src/: gui.c  ssd1306.c  ssd1306_fonts.c
029_DIY-DAC-PT3/mydrivers/inc/: mll_spi.h  rtos_tasks.h  uart_my.h
029_DIY-DAC-PT3/mydrivers/src/: mll_spi.c  timer.c  uart_my.c
030_DIY-DAC-PT4/: README.md  main.c  stm32f4xx_it.c
030_DIY-DAC-PT4/dac/inc/: pcm1792.h  (+1 more)
033_USB-HIDKeyboard-Custom/: usb_hid_keyboard.c  usb_hid_keyboard.h
035_TIMER-Pcounter/: .gitignore  fpCounter_Config.h
035_TIMER-Pcounter/v35_pcounter_example/: .cproject  .mxproject  .project  periodCounter_example.ioc
036_HAL_DMA/Example1_fpCounter/: fpCounter_Config.h
036_HAL_DMA/Example2_UART/: .cproject  .project  dma_uart_example.ioc
040_HAL_RTC/: README.md  main.c
042_BUILDING-PT1/: README.md  diff
042_BUILDING-PT1/make-c/: Makefile  README.md  Test.c
042_BUILDING-PT1/make-cpp/: Makefile  README.md  Test.cpp  Test.h  main.cpp
042_BUILDING-PT1/manual-c/: README.md  Test.h  main.c
042_BUILDING-PT1/test-f103/: test-f103.ioc
042_BUILDING-PT1/test-f407/: test-f407.ioc
043_BUILDING-PT2/: README.md
043_BUILDING-PT2/test-f407vg/: Makefile  test-f407vg.ioc
044_BUILDING-PT3/: README.md
044_BUILDING-PT3/test-f407vg/: .mxproject  Makefile
045_BUILDING-PT4/test-f407vg/: Makefile  test-f407vg.ioc
046_BUILDING-PT5-cmake/: README.md
046_BUILDING-PT5-cmake/sample-f407vg/: CMakeLists.txt  Makefile  gcc-arm-none-eabi.cmake  sample-f407vg.ioc
046_BUILDING-PT5-cmake/sample-f407vg/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
046_BUILDING-PT5-cmake/sample-f407vg/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
046_BUILDING-PT5-cmake/sample-f407vg/CubeMX/: Makefile  STM32F407VGTx_FLASH.ld
046_BUILDING-PT5-cmake/sample-f407vg/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
046_BUILDING-PT5-cmake/sample-f407vg/PROJECT/: project.c  project.h
Eclise Theme/: README.md
(+65 files in other folders)
